fix dark mode icon margen

--- a/src/assets/css/boleto.css
+++ b/src/assets/css/boleto.css
@@ -230,7 +230,7 @@ body {
 /* BOTÃO DARKMODE*/
 
 .mode #mode_icon {
-    margin-top: 10px;
+    margin-top: 90px;
 }
 
 /* HEADER 2*/
