--- a/src/assets/css/cartão.css
+++ b/src/assets/css/cartão.css
@@ -197,9 +197,8 @@ body {
 /* BOTÃO DARKMODE*/
 
 .mode #mode_icon {
-  margin-top: 10px;
+  margin-top: 9px;
 }
-
 
 /* HEADER 2*/
 
