--- a/src/assets/css/index.css
+++ b/src/assets/css/index.css
@@ -182,9 +182,8 @@ body {
 /* BOTÃO DARKMODE*/
 
 .mode #mode_icon {
-  margin-top: 10px;
+  margin-top: 9px;
 }
-
 
 
 /* HEADER 2*/
