--- a/src/assets/css/infopage.css
+++ b/src/assets/css/infopage.css
@@ -49,7 +49,9 @@ body {
 
 }
 
-
+.navbar-brand img{
+margin-left: 200px;
+}
 
 #btn:hover {
   cursor: pointer;
@@ -220,7 +222,7 @@ body {
 /* BOTÃO DARKMODE*/
 
 .mode #mode_icon {
-  margin-top: 10px;
+  margin-top: 9px;
 }
 
 /* HEADER 2*/
