--- a/src/assets/css/pix.css
+++ b/src/assets/css/pix.css
@@ -223,7 +223,7 @@ body {
 /* BOTÃO DARKMODE*/
 
 .mode #mode_icon {
-    margin-top: 10px;
+    margin-top: 9px;
 }
 
 
