--- a/src/assets/css/telapagamento.css
+++ b/src/assets/css/telapagamento.css
@@ -125,7 +125,7 @@ body {
 /* BOTÃO DARKMODE*/
 
 .mode #mode_icon {
-    margin-top: 10px;
+    margin-top: 9px;
 }
 
 #btn {
